# AI-Power

./: .gitignore  CONTRIBUTING.md  DeploymentChecklist.md  Dockerfile  README.md  changelog.md  docker-compose.yml  erp-bin  package-lock.json  package.json  playwright.config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.codex/: README.md
addons/: __init__.py
core/: __init__.py  profiling.py  release.py  rpc_session_context.py  sql_db.py
design-system/: MASTER.md
docs/: QUICK_START_AGENTS.md  a11y-responsive-notes.md  account_odoo19_gap_audit.md  account_partial_reconcile_design.md  adr-frontend-runtime-modernization.md  ai-implementation-checklist.md  ai-rules.md  ai-workflow-automation.md  ai.md  api-contracts.md  api.md  architecture.md  assistant-skill-setup.md  backend.md  brand-system.md  crm_odoo19_gap_audit.md  decisions.md  deferred_product_backlog.md  design-system.md  design_spec_coverage_audit.md  design_system_a11y_audit.md  erp_next_phases_plan_246_253.md  frontend-brand-plan.md  frontend-design-rules.md  frontend-migration-map.md  frontend-service-registry.md  frontend-shell-contract.md  frontend-view-contracts.md  frontend.md  hr_odoo19_gap_audit.md  load-testing-notes.md  main_js_extraction_catalog.md  migrations.md  mrp_odoo19_gap_audit.md  next-phase-36-40.md  next-phase-51-55.md  next-phase-plan.md  odoo19-webclient-gap-table.md  odoo19_core_gap_table.md  odoo19_erp_addon_inventory_audit.md  (+12 more)
scripts/: check_bundle_budget.js  check_concat_bundle.py  check_embedding_column.py  check_ui_ux_pro_max_setup.sh  (+9 more)
(+1960 files in other folders)
